02-argo-rollout/k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: 02-rollout-demo
  labels:
    istio-injection: enabled
