02-argo-rollout/k8s/07-rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: myapp
  namespace: 02-rollout-demo
spec:
  replicas: 3
  selector:
    matchLabels:
      app: myapp
  template:
    metadata:
      labels:
        app: myapp
    spec:
      containers:
      - name: myapp
        image: myapp:v1 # currently it's v1, but in next steps we will update it to v2
        ports:
        - containerPort: 8000
  strategy:
    canary:
      stableService: myapp-stable
      canaryService: myapp-canary
      trafficRouting:
        istio:
          virtualServices:
          - name: myapp
            routes:
            - primary               # must match the name in VirtualService's http.route.name
      steps:
      - setWeight: 5
      - pause: {duration: 300} # 5 min pause for monitoring
      - setWeight: 20
      - pause: {} # manual pause (promote)
      - setWeight: 50
      - pause: {duration: 600}
      - setWeight: 100
